--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ build/
 generated_plugin_registrant.dart
 
 # Android / Gradle
-
+.android/
 android/build/
 android/app/build/
 android/local.properties
