--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: eddy
-description: "A simple calculator with Google Ads."
+description: "A simple calculator app."
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -10,7 +10,6 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  google_mobile_ads: ^6.0.0
 
 dev_dependencies:
   flutter_test:
