--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   google_mobile_ads: ^6.0.0   # ✅ Google Ads SDK
+  math_expressions: ^2.6.0
 
 dev_dependencies:
   flutter_test:
