--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,14 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  google_mobile_ads: ^6.0.0   # ✅ Google Ads SDK
+  google_mobile_ads: ^6.0.0
   math_expressions: ^2.6.0
   firebase_core: ^2.26.0
   firebase_analytics: ^10.1.0
   firebase_auth: ^4.5.0
   google_sign_in: ^6.1.0
+  device_info_plus: ^11.5.0          # ✅ Device info plugin
+  shared_preferences: ^2.2.0         # ✅ Persistent storage
 
 dev_dependencies:
   flutter_test:
