--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx8g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
 android.useAndroidX=true
-android.enableJetifier=true
+android.enableJetifier=false
 
 org.gradle.daemon=true
 org.gradle.parallel=true
