--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: quickcalc
+ name: quickcalc
 description: "A simple calculator with Google Ads."
 publish_to: 'none'
 version: 1.0.0+1
@@ -19,8 +19,8 @@ dependencies:
   google_sign_in: ^6.1.0
   device_info_plus: ^11.5.0          # ✅ Device info plugin
   shared_preferences: ^2.2.0         # ✅ Persistent storage
-  path_provider: ^latest_version
-  share_plus: ^latest_version
+  path_provider: ^2.1.5
+  share_plus: ^12.0.0
 
 dev_dependencies:
   flutter_test:
