--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
- name: quickcalc
+name: quickcalc
 description: "A simple calculator with Google Ads."
 publish_to: 'none'
 version: 1.0.0+1
@@ -12,13 +12,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_mobile_ads: ^6.0.0
   math_expressions: ^2.6.0
-  cloud_firestore: ^4.15.1
   firebase_core: ^2.26.0
   firebase_analytics: ^10.1.0
-  firebase_auth: ^4.5.0
-  google_sign_in: ^6.1.0
-  device_info_plus: ^11.5.0          # ✅ Device info plugin
-  shared_preferences: ^2.2.0         # ✅ Persistent storage
+  shared_preferences: ^2.2.0
   path_provider: ^2.1.5
   share_plus: ^12.0.0
 
@@ -34,5 +30,4 @@ flutter:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/icon/app_icon.png"  # <-- Put your app icon here
-
+  image_path: "assets/icon/app_icon.png"
