--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,12 +17,15 @@ dependencies:
   shared_preferences: ^2.2.0
   path_provider: ^2.1.5
   share_plus: ^12.0.0
+  encrypt: ^5.0.1
+  pdf: ^3.10.2
+  printing: ^5.11.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  flutter_launcher_icons: ^0.10.0
+  flutter_launcher_icons: ^0.14.4
 
 flutter:
   uses-material-design: true
