--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   math_expressions: ^2.6.0
   encrypt: ^5.0.1
   firebase_core: ^2.26.0
+  crypto: ^3.0.3
   firebase_analytics: ^10.1.0
   shared_preferences: ^2.2.0
   path_provider: ^2.1.5
