--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   google_mobile_ads: ^6.0.0
+  path_provider: ^2.1.1
   math_expressions: ^2.6.0
   encrypt: ^5.0.1
   firebase_core: ^2.26.0
