--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_mobile_ads: ^6.0.0
   math_expressions: ^2.6.0
-  dart_pdf_password_protect: ^1.0.0
+  pdf_password_protect: ^1.0.0
   encrypt: ^5.0.1
   firebase_core: ^2.26.0
   crypto: ^3.0.3
