--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   encrypt: ^5.0.1
   firebase_core: ^2.26.0
   crypto: ^3.0.3
+  open_file: ^3.3.1
+  pointycastle: ^3.7.3
   firebase_analytics: ^10.1.0
   shared_preferences: ^2.2.0
   path_provider: ^2.1.5
